--- a/templates/debug.html
+++ b/templates/debug.html
@@ -1,10 +1,10 @@
 
 {% extends "layout.html" %}
 {% block content %}
-<div class="card shadow-sm">
-  <div class="card-body">
-    <h2 class="card-title">Debug Summary: Transactions by Month</h2>
-    <table class="table table-bordered">
+<div class="card">
+  <div class="card-content">
+    <h2 class="title is-4">Debug Summary: Transactions by Month</h2>
+    <table class="table is-fullwidth is-bordered">
     <thead>
       <tr><th>Month</th><th>Transaction Count</th><th>Total Amount</th></tr>
     </thead>
